js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-c-new.js
(function (_) {
  'use strict';
  function externalDemoFunction() { return 5; }

  _.externalDemoFunction = externalDemoFunction;

  return _
}(module.exports));
